--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# project specific
+build/*
+clion/*
+in/*
+out/*
+
 # codeblocks
 *.cbp
 *.depend
@@ -57,3 +63,18 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and WebStorm
+.idea/*
+*.iml
+*.ipr
+cmake-build-*/
+*.iws
+out/
+.idea_modules/
+atlassian-ide-plugin.xml
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
