--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,6 @@ set(SOURCE_FILES
         ${src_path}main.c
         ${src_path}life.c
         ${src_path}automata.c
-        )
+        ${src_path}utils.c src/automata.h src/life.h src/utils.h)
 message(STATUS "project_files_list=${SOURCE_FILES}")
 add_executable(cellular_automata ${SOURCE_FILES})
